k8s/k8s-spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-demo
  template:
    metadata:
      labels:
        app: spring-demo
    spec:
      containers:
      - name: spring-demo
        image: hellisback/k8s-demo-app:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /demo/actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /demo/actuator/health
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 500
---
apiVersion: v1
kind: Service
metadata:
  name: spring-demo-service
spec:
  selector: 
    app: spring-demo
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30003
  type: NodePort
