k8s/k8s-ingress-minikube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: phpmyadmin.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
  - host: spring-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-demo-service
            port:
              number: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-nodeport-service
spec:
  selector:
    app: mysql
  type: NodePort
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
    nodePort: 30306
